<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">TextJs</string>
	<string name="support_email">textjs@stackednotion.com</string>
	
	<string name="notification_title">TextJs</string>
	<string name="notification_text_pre"></string>
	<string name="notification_text_post">- Touch to configure</string>

	<string name="settings_service_started">TextJs Service</string>
	<string name="settings_service_started_substring_inactive">Touch to start the TextJs service</string>
	<string name="settings_service_started_substring_active">Touch to stop the TextJs service</string>

	<string name="settings_service_settings_category">Service Settings</string>

	<string name="settings_start_on_wifi">Start On Wi-Fi</string>
	<string name="settings_start_on_wifi_substring">Start the TextJs service when a Wi-Fi connection is active</string>
	
	<string name="settings_about_category">About</string>
	<string name="settings_show_introduction">Show Introduction</string>
	<string name="settings_about_textjs">About TextJs</string>
	
	<string name="introduction_next">Next</string>
	<string name="introduction_back">Back</string>
	
	<string name="introduction1_instructions1">Make sure your phone and computer are both connected to Wi-Fi.</string>
	<string name="introduction1_instructions2">Type the address into the address bar on your computer\'s browser.</string>
	<string name="introduction1_instructions2_conn_part1">Type</string>
	<string name="introduction1_instructions2_conn_part2">into the address bar on your computer\'s browser.</string>
	<string name="introduction1_instructions3">Start sending and receiving SMS messages!</string>
	
	<string name="introduction2_instructions1">TextJs will automatically start when your phone is connected to Wi-Fi.</string>
	<string name="introduction2_instructions2">The address you need to type into your browser is displayed as a notification on your phone.</string>
	<string name="introduction2_instructions3">If you have a tablet, try typing the address into it\'s browser!</string>
	
	<string name="about_copyright">Copyright © 2011 - 2014 Luca Spiller.\nAll rights reserved.</string>
	<string name="about_famfam">This project uses the Silk icon\nset by Mark James:\nhttp://www.famfamfam.com/lab/icons/silk/</string>
</resources>
