<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:fillViewport="true">

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical">

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:orientation="vertical">
			<ImageView android:id="@+id/logo" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:src="@drawable/icon"
				android:layout_gravity="center" />
			<TextView android:id="@+id/instructions1"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_margin="10dip" android:textSize="20sp"
				android:text="@string/introduction2_instructions1" />
			<TextView android:id="@+id/instructions2"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_margin="10dip" android:textSize="20sp"
				android:text="@string/introduction2_instructions2" />
			<TextView android:id="@+id/instructions3"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_margin="10dip" android:textSize="20sp"
				android:text="@string/introduction2_instructions3" />
		</LinearLayout>

		<RelativeLayout android:layout_width="fill_parent"
			android:layout_height="54dip" android:background="@android:drawable/bottom_bar">
						<Button android:id="@+id/back" android:text="@string/introduction_back"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:minWidth="100sp" android:layout_alignParentLeft="true"
				android:layout_centerVertical="true" />
			<Button android:id="@+id/next" android:text="@string/introduction_next"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:minWidth="100sp" android:layout_alignParentRight="true"
				android:layout_centerVertical="true" />
		</RelativeLayout>
	</LinearLayout>
</ScrollView>