<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<ImageView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:src="@drawable/icon"
		android:layout_gravity="center" android:layout_margin="10dip" />
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_margin="10dip"
		android:textSize="40sp" android:textStyle="bold" android:gravity="center"
		android:text="@string/app_name" android:textColor="#fff" />
	<TextView android:id="@+id/version" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_margin="10dip"
		android:textSize="20sp" android:textStyle="bold" android:gravity="center" android:textColor="#fff" />
	<TextView android:layout_width="fill_parent" android:autoLink="email"
		android:layout_height="wrap_content" android:layout_margin="10dip"
		android:textSize="20sp" android:gravity="center" android:text="@string/support_email"
		android:textColor="#fff" />
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_margin="10dip"
		android:textSize="20sp" android:gravity="center" android:text="@string/about_copyright"
		android:textColor="#fff" />
	<TextView android:layout_width="fill_parent" android:autoLink="web"
		android:layout_height="wrap_content" android:layout_marginTop="50dip"
		android:gravity="center" android:text="@string/about_famfam"
		android:textColor="#fff" />
</LinearLayout>
